--- a/MyMailBox/Views/MailBox/Index.cshtml
+++ b/MyMailBox/Views/MailBox/Index.cshtml
@@ -71,7 +71,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-route="mailboxreference" asp-route-reference="@item.Reference">Details</a> |
+                <a asp-route="discount" asp-route-reference="@item.Reference">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
