--- a/MyMailBox/Views/MailBox/Edit.cshtml
+++ b/MyMailBox/Views/MailBox/Edit.cshtml
@@ -25,8 +25,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Color" class="control-label"></label>
-                <input asp-for="Color" class="form-control" />
-                <span asp-validation-for="Color" class="text-danger"></span>
+                <select asp-for="ColorId" asp-items="@ViewBag.Colors" class="form-control" >
+                    <option>Please select one</option>
+                </select>
+                <span asp-validation-for="ColorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Height" class="control-label"></label>
