--- a/MyMailBox/Views/MailBox/Edit.cshtml
+++ b/MyMailBox/Views/MailBox/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyMailBox.Models.MailBox
+﻿@model MyMailBox.Models.MailBoxEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Reference" class="control-label"></label>
-                <input asp-for="Reference" class="form-control" />
+                <input asp-for="Reference" class="form-control" readonly="true" />
                 <span asp-validation-for="Reference" class="text-danger"></span>
             </div>
             <div class="form-group">
